Ritual Embriagado - adição
Evento dinamico da cabana do Jansen na saída de RavenCrest adicionado a lista de eventos

--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@ const MULTIPLIER = 12;
 /* ================= EVENTOS ================= */
 const events = [
 {
-    name:"Invasão Sombria",
-    map:"Cemitério de Nocturn",
+    name:"Ritual Embriagado",
+    map:"Glademire",
     type:"World Event",
-    level:30,
-    startTime:"02:00:00"
+    level:08,
+    startTime:"08:00:00","20:00:00"
 },
 {
     name:"Cerco Arcano",
