Replace 'Cerco Arcano' with 'Louvor ao Sol'
Evento Louvor ao Sol (Resgate da marina contra Saurians)
Adicionado com horário de inicio

--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@ const events = [
     startTime:"08:00:00","20:00:00"
 },
 {
-    name:"Cerco Arcano",
-    map:"Fortaleza de Ravenfall",
+    name:"Louvor ao Sol",
+    map:"Gilead Islando",
     type:"PvE",
     level:45,
-    recurrenceHours:4
+    startTime:"05:24:00"
 },
 {
     name:"Fenda do Caos",
