--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ const events = [
     map:"Glademire",
     type:"World Event",
     level:08,
-    startTime:"08:00:00","20:00:00"
+    startTime:["08:00:00","20:00:00"]
 },
 {
     name:"Louvor ao Sol",
