Fix level and startTime formatting for events

--- a/index.html
+++ b/index.html
@@ -126,8 +126,15 @@ const events = [
     name:"Ritual Embriagado",
     map:"Glademire",
     type:"World Event",
-    level:08,
-    startTime:["08:00:00","20:00:00"]
+    level:8,
+    startTime:"08:00:00"
+},
+{
+    name:"Ritual Embriagado",
+    map:"Glademire",
+    type:"World Event",
+    level:8,
+    startTime:"20:00:00"
 },
 {
     name:"Louvor ao Sol",
