Change event types to 'World Event' in index.html

--- a/index.html
+++ b/index.html
@@ -142,17 +142,24 @@ const events = [
 {
     name:"Louvor ao Sol",
     map:"Gilead Islando",
-    type:"PvE",
+    type:"World Event",
     level:45,
     startTime:"05:24:00"
 },
 {
     name:"Fenda do Caos",
     map:"Deserto de Ashkar",
-    type:"Boss Mundial",
-    level:60,
-    recurrenceHours:6
-}
+    type:"World Event",
+    level:45,
+    startTime:"18:00:00"
+},
+{
+    name:"Sacrifício Norturno",
+    map:"Gilead Island",
+    type:"World Event"
+    level:45,
+    recurrenceHours:24
+},
 ];
 
 /* ================= TEMPO ================= */
