--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ const events = [
 {
     name:"Sacrifício Norturno",
     map:"Gilead Island",
-    type:"World Event"
+    type:"World Event",
     level:45,
     recurrenceHours:24
 },
