Add reminder comment for event start time
Added a comment indicating a reminder for the event start time.

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ const events = [
     map:"Gilead Island",
     type:"World Event",
     level:45,
-    startTime:"05:24:00"
+     startTime:"05:24:00" // 🔁 TODO DIA ÀS 05:24 AM
 },
 {
     name:"Fenda do Caos",
