--- a/index.html
+++ b/index.html
@@ -128,21 +128,21 @@ const events = [
 {
     name:"Ritual Embriagado",
     map:"Glademire",
-    type:"World Event",
+    type:"World-Time Event",
     level:8,
     startTime:"08:00:00"
 },
 {
     name:"Ritual Embriagado",
     map:"Glademire",
-    type:"World Event",
+    type:"World-Time Event",
     level:8,
     startTime:"20:00:00"
 },
 {
     name:"Louvor ao Sol",
     map:"Gilead Island",
-    type:"World Event",
+    type:"Trigger Event",
     level:45,
      startTime:"05:24:00" // 🔁 TODO DIA ÀS 05:24 AM
 },
@@ -156,9 +156,29 @@ const events = [
 {
     name:"Sacrifício Noturno",
     map:"Gilead Island",
-    type:"World Event",
+    type:"Trigger Event",
     level:45,
     startTime:"18:00:00" // 🔁 TODO DIA ÀS 06:00 PM
+}
+{
+    name:"Passagens Ocultas",
+    map:"Rohna Woods",
+    type:"Trigger Event",
+    level:45,
+    startTime:"20:00:00" // 🔁 TODO DIA ÀS 08:00 PM
+}
+{
+    name:"Passagens Ocultas",
+    map:"Rohna Woods",
+    type:"Trigger Event",
+    level:45,
+    startTime:"05:45:00" // 🔁 TODO DIA ÀS 05:45 AM
+}
+{
+    name:"Abelhas Assassinas",
+    map:"Rohna Woods",
+    type:"Mob-Spawn Event",
+    level:45,
 }
 ];
 
