--- a/index.html
+++ b/index.html
@@ -179,7 +179,13 @@ const events = [
     map:"Rohna Woods",
     type:"Mob-Spawn Event",
     level:45
-}
+},
+{
+    name:"Olhe Mas Não Toque",
+    map:"Sajecho Island",
+    type:"Trigger Event",
+    level:45
+}    
 ];
 
 /* ================= TEMPO ================= */
