--- a/index.html
+++ b/index.html
@@ -164,27 +164,34 @@ const events = [
     name:"Passagens Ocultas",
     map:"Rohna Woods",
     type:"Trigger Event",
-    level:45,
+    level:16,
     startTime:"20:00:00"
 },
 {
     name:"Passagens Ocultas",
     map:"Rohna Woods",
     type:"Trigger Event",
-    level:45,
+    level:16,
     startTime:"05:45:00"
 },
 {
     name:"Abelhas Assassinas",
     map:"Rohna Woods",
     type:"Mob-Spawn Event",
-    level:45
+    level:15
 },
 {
     name:"Olhe Mas Não Toque",
     map:"Sajecho Island",
     type:"Trigger Event",
-    level:45
+    level:21
+},   
+{
+    name:"Uma Escolta à Defiance",
+    map:"Zephyr Vale",
+    type:"Trigger Event",
+    level:33,
+    startTime:"00:00:00"
 },   
 ];
 
