Update video URL format in index.html

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ const events = [
     type:"Trigger Event",
     level:33,
     startTime:"00:00:00",
-    videoUrl: "https://www.youtube.com/watch?v=vwNoPAWTIDo&list=PL27eL0vwH2jKpLJytTB4gwJ8soNKt1o4u&index=37"
+    videoUrl: "https://youtu.be/vwNoPAWTIDo?list=PL27eL0vwH2jKpLJytTB4gwJ8soNKt1o4u"
 },
 {
     name:"Abelhas Assassinas",
