Clear videoUrl fields in event data
Removed video URLs from World-Time Event entries.

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ const events = [
     type:"World-Time Event",
     level:8,
     startTime:"08:00:00",
-    videoUrl: "https://www.youtube.com/watch?v=dQw4w9WgXcQ" 
+    videoUrl: "" 
 },
 {
     name:"Ritual Embriagado",
@@ -254,7 +254,7 @@ const events = [
     type:"World-Time Event",
     level:8,
     startTime:"20:00:00",
-    videoUrl: "https://youtu.be/dQw4w9WgXcQ" // Exemplo de link curto
+    videoUrl: "" 
 },
 {
     name:"Louvor ao Sol",
@@ -302,7 +302,7 @@ const events = [
     type:"Trigger Event",
     level:33,
     startTime:"00:00:00",
-    videoUrl: "https://youtu.be/vwNoPAWTIDo?list=PL27eL0vwH2jKpLJytTB4gwJ8soNKt1o4u"
+    videoUrl: ""
 },
 {
     name:"Abelhas Assassinas",
