Set videoUrl to 'none' for multiple events

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ const events = [
     type:"World-Time Event",
     level:8,
     startTime:"08:00:00",
-    videoUrl: "" 
+    videoUrl: "none" 
 },
 {
     name:"Ritual Embriagado",
@@ -254,7 +254,7 @@ const events = [
     type:"World-Time Event",
     level:8,
     startTime:"20:00:00",
-    videoUrl: "" 
+    videoUrl: "none" 
 },
 {
     name:"Louvor ao Sol",
@@ -262,7 +262,7 @@ const events = [
     type:"Trigger Event",
     level:45,
     startTime:"05:24:00",
-    videoUrl: "" 
+    videoUrl: "none" 
 },
 {
     name:"Fenda do Caos",
@@ -270,7 +270,7 @@ const events = [
     type:"World Event",
     level:45,
     startTime:"18:00:00",
-    videoUrl: ""
+    videoUrl: "none"
 },
 {
     name:"Sacrifício Noturno",
@@ -278,7 +278,7 @@ const events = [
     type:"Trigger Event",
     level:45,
     startTime:"18:00:00",
-    videoUrl: ""
+    videoUrl: "none"
 },
 {
     name:"Passagens Ocultas",
@@ -286,7 +286,7 @@ const events = [
     type:"Trigger Event",
     level:16,
     startTime:"20:00:00",
-    videoUrl: ""
+    videoUrl: "none"
 },
 {
     name:"Passagens Ocultas",
@@ -294,7 +294,7 @@ const events = [
     type:"Trigger Event",
     level:16,
     startTime:"05:45:00",
-    videoUrl: ""
+    videoUrl: "none"
 },
 {
     name:"Uma Escolta à Defiance",
@@ -302,21 +302,21 @@ const events = [
     type:"Trigger Event",
     level:33,
     startTime:"00:00:00",
-    videoUrl: ""
+    videoUrl: "none"
 },
 {
     name:"Abelhas Assassinas",
     map:"Rohna Woods",
     type:"Mob-Spawn Event",
     level:15,
-    videoUrl: ""
+    videoUrl: "none"
 },
 {
     name:"Olhe Mas Não Toque",
     map:"Sajecho Island",
     type:"Trigger Event",
     level:21,
-    videoUrl: ""
+    videoUrl: "none"
 },    
 ];
 
